# multiplication_matrix

./: .gitignore  CMakeLists.txt  README.md  input.txt  multiplication_matrix.cpp
test/: 1.md  2.md  random_matrix.py  test.md
